--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 body {
 	background: #fff;
 	color: #000;
+	/* This is the width of a Little Printer publication. */
 	width: 384px;
 	padding: 0;
-	margin: 0;
-	font-family: Arial, sans-serif;
-	font-size: 16px;
-}
-
-#lp-container {
+	/* Leave a little space above and below the publication. */
 	margin: 10px 0;
+	/* See the available fonts at
+	 * http://remote.bergcloud.com/developers/style_guide/fonts */
+	font-family: Arial, sans-serif;
+	font-size: 20px;
+	line-height: 1.5em
 }
 
